--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Home"
 title_separator          : "-"
 name                     : &name "Pei-YuTseng"
 description              : &description "personal description"
-url                      : https://paiyutsutw.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://paiyutsutw.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "/my_website" # the subpath of your site, e.g. "/my_website"
 repository               : "PAIYUTSUTW/my_website"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
